[玩家 - 0.1.37][管理 - 0.1.23] 优化日志与下载服务稳定性